--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@formspree/react": "^3.0.0",
     "framer-motion": "^12.23.24",
+    "i18next": "^25.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.5.0",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
