--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@formspree/react": "^3.0.0",
     "framer-motion": "^12.23.24",
     "i18next": "^25.7.3",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.5.0",
